# test-fortran-python

./: meson.build  pyproject.toml
.github/workflows/: build.yml
my_project/: __init__.py  fib2.pyf  meson.build
